<resources>
    <string name="app_name">Launcher</string>
    <string name="string_home_beiwanglu">Memorandum</string>
    <string name="string_home_wendang">Documentation</string>
    <string name="string_home_media">Album</string>
    <string name="string_home_camera">Camera</string>
    <string name="string_home_setting">Settings</string>
    <string name="string_home_we_chat">Wechat</string>
    <string name="string_home_qq_music">QQ Music</string>
    <string name="string_home_gaode">Amap</string>
    <string name="string_home_wps">WPS</string>
    <string name="string_home_ximalaya">XMLY</string>
    <string name="string_home_mmi">MMI Test Tool</string>
    <string name="string_app_not_installed">The app is not installed</string>
    <string name="string_app_list">APP LIST</string>
    <string name="string_wlan_disconnected">WLAN Disconnected</string>
    <string name="string_wlan_connected">WLAN Connected</string>
    <string name="string_bluetooth_disconnected">Bluetooth Disconnected</string>
    <string name="string_bluetooth_connected">Bluetooth Connected</string>
    <string name="string_bluetooth_disconnected_retry">Connect fail,try again</string>
    <string name="string_low_battery">Battery level is lower than 15%</string>
    <string name="string_too_low_battery">Battery level is lower than 5%,please charge in time</string>
    <string name="string_too_low_battery_shutdown">Low battery,it will shut down</string>
    <string name="string_memo_data">You have a memo,please deal with it in time</string>
    <string name="string_click_to_close">Click to close reminder</string>
    <string name="string_shut_down">Shut down</string>
    <string name="string_reboot">Reboot</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_i_kwnon">Got It</string>
    <string name="string_time_format">MM/dd E</string>
    <string name="string_today">Today</string>
    <string name="string_tomorrow">Tomorrow</string>
    <string name="string_time_format_1">MM/dd </string>
    <string name="string_time_format_2">MM/dd Add</string>
    <string name="string_add_memo">Add memo</string>
    <string name="string_reboot_rightnow">About to restart</string>
    <string name="string_shutdown_rightnow">About to shut down</string>
    <string name="string_reboot_cancel">Cancel restart</string>
    <string name="string_shutdown_cancel">Cancel shut down</string>
    <string name="string_new_call_msg">You have a new incoming message</string>
    <string name="string_phone_notification">Mobile notification</string>
    <string name="string_phone_notification_guide1">How to remind the notification of mobile application at the glasses end</string>
    <string name="string_scan">Scan</string>
    <string name="string_phone_notification_guide2">Take out your mobile phone, scan the Inmolens two-dimensional code on the instructions or official account\nDownload and install apps</string>
    <string name="string_bluetooth">Bluetooth</string>
    <string name="string_phone_notification_guide3">Turn on Bluetooth and inmolens\nConnect your glasses</string>
    <string name="string_phone_notification_guide4">Click【Mobile notification】\nOpen the mobile app that needs to be notified</string>
    <string name="string_phone_notification_guide5">Please keep Bluetooth connected and inmolens running in the background</string>
    <string name="string_phone_notification_guide6">Open Inmolens and Connect your glass</string>
    <string name="string_connect_phone">Phone Connected</string>
    <string name="string_phone_mirror">Phone Mirror</string>
    <string name="string_document_mirror">Document Mirror</string>
    <string name="string_phone_video">Video</string>
    <string name="string_keep_connection">Please keep the WLAN connection and INMOLENS running in the background</string>
    <string name="string_close_phone">You can turn off the screen of your phone and turn pages by swiping the touchpad</string>
    <string name="string_back_mirror">Back to mirror</string>
    <string name="string_connect">to connect</string>
    <string name="string_mirror_tips1">Connect the glasses to the same WLAN as the phone, or connect the glasses to the phone hotspot\nclick 【Mobile phone mirroring】 or 【Document mirroring】</string>
    <string name="string_mirror_tips2">Click INMOLENSAPP-【Mobile phone mirroring】or mirror floating button to complete\nTo see the document, please select【Document mirroring】</string>
    <string name="string_notification_count">Air reminds you of 5 app notifications in real time</string>
    <string name="string_keep_wlan_connection">Please keep WLAN connection and Inmolens background</string>
    <string name="string_inmo_ring_connected">Inmo Ring Connected</string>
    <string name="string_inmo_ring_disconnected">Inmo Ring Disconnected</string>
    <string name="string_video_mirror_guide_msg1">Watch video</string>
    <string name="string_video_mirror_guide_msg2">Connect the glasses to the same WLAN as the phone, or connect the glasses to the phone hotspot</string>
    <string name="string_video_mirror_guide_msg3">To play the mobile video, click the TV icon in the upper right corner of the player</string>
    <string name="string_video_mirror_guide_msg4">Click on the device searched by the phone【Inmo Air】\nWatch videos through glasses</string>
    <string name="string_video_mirror_guide_msg5">You can turn off the screen of your phone and slide the touchpad of the glasses to adjust the progress\nTap the trackpad to pause/play the video</string>
    <string name="string_video_mirror_guide_msg6">To play the mobile video, click the TV icon in the upper right corner of the player\nselect device【Inmo Air】</string>
    <string name="string_video_mirror_guide_msg7">Video is paused</string>
    <string name="string_video_mirror_guide_msg8">You can tap the trackpad to pause/play the video</string>
    <string name="string_video_mirror_guide_msg9">You can also turn off the phone screen and slide the glasses touchpad to adjust the progress</string>
    <string name="string_video_mirror_guide_msg10">Back to video</string>
    <string name="string_phone_mirror_guide_msg1">Glasses display phone mirroring</string>
    <string name="string_same_network">Please ensure that the device and mobile phone are connected to the same local area network or hotspot</string>
    <string name="string_glass_connected">This glass is already bonded</string>
</resources>